name:               docker-tmp-proc
version:            0.2.0.0
synopsis:           Use docker to run 'tmp' procesess
description:        Use processes run in docker containers as temporary processes
                    similarly to the use of files in the tmp file system
license:            BSD3
license-file:       LICENSE
copyright:          2019 Tim Emiola
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Testing
homepage:           https://github.com/adetokunbo/docker-tmp-proc
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: https://github.com/adetokunbo/docker-tmp-proc.git

library
  exposed-modules:  System.Docker.TmpProc
                    System.Docker.TmpProc.Postgres
                    System.Docker.TmpProc.Redis
                    System.Docker.TmpProc.Warp
  hs-source-dirs:   src
  build-depends:    base              >= 4.11 && < 4.12
                  , async             >= 2.2.1 && < 2.3
                  , bytestring        >= 0.10.8.2 && < 0.11
                  , hedis             >= 0.10.4 && < 0.11.1
                  , mtl               >= 2.2.2 && < 2.3
                  , postgresql-simple >= 0.5.4.0 && < 0.6
                  , process           >= 1.6.3.0 && < 1.7
                  , text              >= 1.2.3 && < 1.3
                  , wai               >= 3.2.1 && < 3.3
                  , warp              >= 3.2.3 && < 3.3
                  , warp-tls          >= 3.2.4 && < 3.3
                  , unliftio          >= 0.2.7 && < 0.3
                  , network           >= 2.6.3.6 && < 2.8
  default-language: Haskell2010
  ghc-options:     -fno-ignore-asserts -Wall

test-suite docker-tmp-proc-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Test.SimpleServer
                    Test.TmpProc.Hspec
                    Test.TmpProc.PostgresSpec
                    Test.TmpProc.RedisSpec
                    Test.TmpProc.WarpSpec
  hs-source-dirs:   test
  build-depends:    base
                  , bytestring
                  , docker-tmp-proc
                  , data-default
                  , hedis
                  , hspec
                  , http-types
                  , postgresql-simple
                  , req
                  , text
                  , wai
                  , warp
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall
