cabal-version:      3.0
name:               hspec-tmp-proc
version:            0.4.0.0
synopsis:           Simplify using TmpProc in Hspec tests
description:        Reduces boilerplate when using TmpProc in HSpec tests
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2021 Tim Emiola
author:             Tim Emiola
maintainer:         adetokunbo@users.noreply.github.com
category:           Testing
homepage:           https://github.com/adetokunbo/tmp-proc
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/tmp-proc.git

library
  exposed-modules:  Test.Hspec.TmpProc
  hs-source-dirs:   src
  build-depends:    base              >= 4.11 && < 4.16
                  , hspec
                  , tmp-proc
  default-language: Haskell2010
  ghc-options:     -fno-ignore-asserts -Wall
