cabal-version:      3.0
name:               tmp-proc-example
version:            0.4.0.0
synopsis:           Run a tmp postgresql proc
description:        An example that demos using tmp-proc to launch postgresql in docker.
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2021 Tim Emiola
author:             Tim Emiola
maintainer:         adetokunbo@users.noreply.github.com
category:           Testing
homepage:           https://github.com/adetokunbo/tmp-proc
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/tmp-proc.git

library
  exposed-modules:  System.TmpProc.Docker.Postgres
  hs-source-dirs:   src
  build-depends:    base              >= 4.11 && < 4.16
                  , bytestring        >= 0.10.8.2 && < 0.12
                  , postgresql-simple >= 0.5.4.0 && < 0.6.5
                  , text              >= 1.2.3 && < 1.3
                  , tmp-proc          >= 0.4.0.0 && < 0.5.0.0
  default-language: Haskell2010
  ghc-options:     -fno-ignore-asserts -Wall


test-suite integration-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Test.TmpProc.Docker.PostgresSpec
  hs-source-dirs:   test
  build-depends:    base
                  , bytestring
                  , hspec
                  , hspec-tmp-proc
                  , postgresql-simple
                  , text
                  , tmp-proc-example
                  , tmp-proc
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall
