cabal-version:      3.0
name:               tmp-proc-redis
version:            0.4.0.0
synopsis:           Run a "tmp" redis process
description:        Provides a instance of TmpProc.Proc to run redis in a docker container for
                    use in integration tests that use tmp-proc
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2021 Tim Emiola
author:             Tim Emiola
Maintainer:         adetokunbo@users.noreply.github.com
category:           Testing
homepage:           https://github.com/adetokunbo/tmp-proc
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/tmp-proc.git

library
  exposed-modules:  System.TmpProc.Docker.Redis
  hs-source-dirs:   src
  build-depends:    base              >= 4.11 && < 4.16
                  , bytestring        >= 0.10.8.2 && < 0.12
                  , hedis             >= 0.10.4 && < 0.15
                  , text              >= 1.2.3 && < 1.3
                  , tmp-proc          >= 0.4.0.0 && < 0.5.0.0
  default-language: Haskell2010
  ghc-options:     -fno-ignore-asserts -Wall


test-suite integration-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Test.TmpProc.Docker.RedisSpec
  hs-source-dirs:   test
  build-depends:    base
                  , bytestring
                  , hspec
                  , hspec-tmp-proc
                  , hedis
                  , text
                  , tmp-proc-redis
                  , tmp-proc
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall
