cabal-version:      3.0
name:               tmp-proc
version:            0.4.0.0
synopsis:           Run 'tmp' processes
description:        Uses processes run in docker containers as temporary processes
                    similarly to the use of files in the tmp file system
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Tim Emiola
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Testing
homepage:           https://github.com/adetokunbo/docker-tmp-proc
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md
                    test_certs/*.pem
                    test_certs/*.csr

source-repository head
  type:     git
  location: https://github.com/adetokunbo/docker-tmp-proc.git

library
  exposed-modules:  System.TmpProc.Docker
                    System.TmpProc.TypeLevel
                    System.TmpProc.Warp
  hs-source-dirs:   src
  build-depends:    base              >= 4.11 && < 4.16
                  , async             >= 2.2.1 && < 2.3
                  , bytestring        >= 0.10.8.2 && < 0.12
                  , hedis             >= 0.10.4 && < 0.15
                  , mtl               >= 2.2.2 && < 2.3
                  , postgresql-simple >= 0.5.4.0 && < 0.6.5
                  , process           >= 1.6.3.0 && < 1.7
                  , text              >= 1.2.3 && < 1.3
                  , wai               >= 3.2.1 && < 3.3
                  , warp              >= 3.2.3 && < 3.4
                  , warp-tls          >= 3.2.4 && < 3.4
                  , unliftio          >= 0.2.7 && < 0.3
                  , network           >= 2.6.3.6 && < 3.2
  default-language: Haskell2010
  ghc-options:     -fno-ignore-asserts -Wall

test-suite integration-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Test.SimpleServer
                    Test.System.TmpProc.HttpBinSpec
                    Test.System.TmpProc.WarpSpec
                    Test.System.TmpProc.Hspec
  hs-source-dirs:   test
  build-depends:    base
                  , bytestring
                  , connection
                  , tmp-proc
                  , data-default
                  , hspec
                  , http-client
                  , http-client-tls
                  , http-types
                  , req
                  , text
                  , wai
                  , warp
                  , warp-tls
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall
